k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpulse-service
  namespace: default
  labels:
    app: devpulse
spec:
  selector:
    app: devpulse
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
